--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Annai Before/After</title>
     <script src='http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.js'></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
-    <script src="javascripts/leaflet-bing-layer.js"></script>
-    <script src="javascripts/leaflet-side-by-side.js"></script>
+    <script src="leaflet-bing-layer.js"></script>
+    <script src="leaflet-side-by-side.js"></script>
     <link href='http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.css' rel='stylesheet' />
     <style>
     body {
