--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset=utf-8 />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui' />
     <title>Annai Before/After</title>
-    <script src='https://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.js'></script>
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
+    <script src='http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.js'></script>
+    <script src="http://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
     <script src="leaflet-bing-layer.js"></script>
     <script src="leaflet-side-by-side.js"></script>
     <link href='http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.css' rel='stylesheet' />
