--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui' />
     <title>Annai Before/After</title>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="http://cdn.polyfill.io/v2/polyfill.min.js?features=Promise"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="leaflet-bing-layer.js"></script>
     <script src="leaflet-side-by-side.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
